@@ -1,3 +1,7 @@
+2012-10-09 bbirtles@mozilla.com
+	Fixed further typos.
+	Added definition of alpha and luminance under 'mask' property.
+
 2012-10-07 dschulze@adobe.com
 	Fixed typos.
 
